# queuepilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: auth.py  config.py  eval_api.py  feedback.py  main.py  ratelimit.py  schemas.py
app/analyze/: baseline.py  graph.py  graph_analyzer.py  scoring.py  trace.py
app/graphql/: __init__.py  schema.py  types.py
app/providers/: chat.py  embeddings.py
app/retrieval/: __init__.py  hybrid.py  pinecone_store.py  sparse.py
data/: __init__.py  download.py  ingest.py  normalize.py
data/artifacts/: bm25_params.json
docs/build-plans/: 00-overview.md  slice-a.md  (+1 more)
eval/: __init__.py  card.py  client.py  dataset.py  fixtures.py  run_experiment.py  run_online.py  settings.py  target.py  upload.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
learn/: 00_config_demo.py  01_schemas_demo.py  02_embeddings.py  03_bm25_sparse.py  04_hybrid_fusion.py  05_confidence_v0.py  06_langgraph_state.py  07_guarded_copilot.py  08_langsmith_tracing.py  09_explainability.py  10_calibration_demo.py  11_eval.py  12_eval_datasets.py  13_containerization.py  14_securing_a_public_api.py  15_graphql.py  _template.py  run_all.py
tests/: test_analyze_endpoint.py  test_analyze_integration.py  test_auth.py  test_baseline.py  test_chat.py  test_embeddings.py  test_eval_api.py  test_eval_calibration.py  test_eval_card.py  test_eval_dataset.py  test_eval_evaluators.py  test_eval_judge.py  test_eval_live_integration.py  test_eval_run_online.py  test_eval_target.py  test_feedback.py  test_frontend_stub.py  test_graph.py  test_graph_analyze_integration.py  test_graph_analyzer.py  test_graphql.py  test_health.py  test_hybrid.py  test_nodes_decide.py  test_nodes_extract.py  test_normalize.py  test_pinecone_integration.py  test_pinecone_store.py  test_ratelimit.py  test_schemas.py  test_scoring.py  test_sparse.py  test_trace.py
(+89 files in other folders)
