[project]
name = "queuepilot"
version = "0.1.0"
description = "Agentic AI ticketing system: FastAPI + LangGraph + Pinecone hybrid retrieval + LangSmith"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=2.10.0",
    "pinecone-text>=0.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Target 3.12 so numpy 2.x stubs (which use the `type` alias statement) parse correctly.
# The runtime still targets Python >=3.11 (see `requires-python`); all project code uses
# `from __future__ import annotations` and stays fully compatible with 3.11+.
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# pinecone-text ships no type stubs; treat all imports from it as Any.
module = ["pinecone_text", "pinecone_text.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
